force-app/main/default/objects/synety__Call_Update_Queue__c/synety__Call_Update_Queue__c.object-meta.xml
<CustomObject>
    <label>Call Update Queue</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Update Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>