force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Category_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Category_Id__c</fullName>
    <label>Category Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>