force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Contact__c.field-meta.xml
<CustomField>
    <fullName>synety__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Update Queue</relationshipLabel>
    <relationshipName>Call_Update_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>