force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>