force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Long_Notes__c.field-meta.xml
<CustomField>
    <fullName>synety__Long_Notes__c</fullName>
    <description>This field will now be used to store call notes</description>
    <label>Long Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>