force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Notes__c.field-meta.xml
<CustomField>
    <fullName>synety__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>