force-app/main/default/objects/synety__Call_Update_Queue__c/fields/synety__Session_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Session_Id__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>