force-app/main/default/objects/synety__Call_Update_Queue__c/listViews/synety__All1.listView-meta.xml
<ListView>
    <fullName>synety__All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>